# MultiModalSJTAgent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  check_available_traits.py  docker-compose.yml  pyproject.toml  requirements.txt  start_web.bat  start_web.sh  test.py
src/: __init__.py
src/img/: __init__.py  config.py  make_ins.py
src/img/annotator/: __init__.py  annotator.py  annotator_llm.py  bubble_it.py
src/img/pipeline/: main.py  utils.py
src/img/prompts/graph_utils/: graph2prompt.py
src/img/prompts/vng/: vng_from_graph.py  vng_polisher.py
src/img/viz/: sg.py
src/txt/: __init__.py
src/txt/datasets/: load_data.py
src/txt/datasets/TRAIT_DEF/: BF_detailed_en.json
src/txt/datasets/scales/IPIP/: ipip120_en.json  ipip120_zh.json  meta.json
src/txt/datasets/scales/NEO-PI-R/: meta.json  neo-pi-r_en.json  neo-pi-r_zh.json
src/txt/datasets/scales/SJTs/: mussel_en.json  mussel_zh.json
src/txt/workflow/: main.py
src/txt/workflow/prompts/: behavior_adapter.py  scenario_builder_a.py  scenario_builder_b.py  trait_decoder.py  trait_polisher.py
src/vid/: README.md  __init__.py  requirements.txt
src/vid/agents/: Hailuo.py  Tools.py  mulit_agent0.1.py  prompts.py  user_inputs.py  vioce_autospeed.py
src/vid/test/: __init__.py  merge_two_files.py
static/css/: style.css
static/js/: main.js
templates/: base.html  image_sjt.html  index.html  quiz.html  text_sjt.html  video_sjt.html
