[project]
name = "multimodalsjtagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "httpx[socks]>=0.28.1",
    "insightface>=0.7.3",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-swarm>=0.1.0",
    "lmitf>=0.1.24",
    "matplotlib>=3.10.8",
    "moviepy==1.0.3",
    "nest-asyncio>=1.6.0",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "onnxruntime>=1.23.2",
    "openai>=2.14.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "wasabi>=1.1.3",
]
